[package]
name = "horizons"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_egui = "0.25.0"
bevy_file_dialog = "0.4.0"
bevy_rapier2d = "0.25.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
